Chess Club/src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <formula>Membership_Expiry_Date__c &gt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Person_ID_del__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Expiry_Date__c</fullName>
        <label>Membership Expiry Date</label>
        <summarizedField>Membership__c.Expiry_Date__c</summarizedField>
        <summaryForeignKey>Membership__c.Player__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Person_ID_del__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>Players_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Under_Age__c</fullName>
        <formula>Person_ID_del__r.Underage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under-Age</label>
        <type>Checkbox</type>
    </fields>
    <label>Player Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>DOB__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Player#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Under_Age</fullName>
        <active>false</active>
        <errorConditionFormula>AND (Person_ID_del__r.RecordType.Id =&quot;0120Y000000RQg4&quot;,
 Under_Age__c )</errorConditionFormula>
        <errorMessage>Under-age players should be listed as under-age, not as contact</errorMessage>
    </validationRules>
</CustomObject>